--- a/client/src/styles/SectionDefault.css
+++ b/client/src/styles/SectionDefault.css
@@ -29,6 +29,9 @@
   width: 100%;
   justify-items: center;
   margin-top: 20px;
+  position: relative;
+  overflow: visible;
+  z-index: 0;
 }
 
 /* display: flex;
